[tool.poetry]
name = "pyforming"
version = "0.1.0"
description = ""
authors = ["mborawski <marcin.borawski@pg.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.7"
# numpy = "1.17"

[tool.poetry.dev-dependencies]
# pytest = "6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
